# assistant-agent

./: .gitignore  PLAN.md  README.md  pyproject.toml  repos.toml
scripts/: audio_smoketest.py
src/assistant_agent/: __init__.py  audio.py  audiocheck.py  cli.py  collector.py  config.py  contract.py  deck.py  dossier.py  feedback.py  gemini_text.py  state.py  tools.py  voice.py
tests/: test_collector.py  test_contract.py  test_deck.py  test_feedback.py
