[project]
name = "assistant-agent"
version = "0.1.0"
description = "A voice-enabled colleague that walks you through completed AI coding work."
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.55.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "python-pptx>=1.0.2",
    "sounddevice>=0.4.7",
]

[project.scripts]
assistant = "assistant_agent.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/assistant_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
